--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
 export CLOUDSDK_CONFIG="./.gcloud"
 export GOPATH="$XDG_CACHE_HOME/go"
+export CREDENTIALS_FILE_PATH="./credentials.json"
 
 use flake
